--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ subjects:
 - !lcc 'TT'
 - !lcsh 'Women''s clothing'
 - !lcsh 'Costume'
+- GITenberg
 title: Woman as Decoration
 url: http://www.gutenberg.org/ebooks/18901
